[tool.poetry]
name = "stinetwork"
version = "0.0.1"
description = "A package that facilitates reliability investigations in power systems"
authors = ["Stine Fleischer Myhre"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.2"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
