[tool.poetry]
name = "relsad"
version = "0.0.2"
description = "A package that facilitates reliability investigations in power systems"
readme = "README.rst"
repository = "https://github.com/stinefm/relsad"
homepage = "https://github.com/stinefm/relsad"
documentation = "https://relsad.readthedocs.io/"
authors = ["Stine Fleischer Myhre"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pre-commit = "^2.12.0"
black = "^20.8b1"
flake8 = "^3.9.0"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
pandas = "^1.4.1"
sphinxcontrib-bibtex = "^2.4.2"
sphinx-book-theme = "^0.3.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.2"
sphinxcontrib-napoleon = "^0.7"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.rst"            # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E203, W503"

[tool.isort]
profile = "black"
skip = ["relsad/network/systems/__init__.py"]
